@@ -27,7 +27,6 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.security.Principal;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.List;
@@ -36,7 +35,6 @@ import java.util.Objects;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import vn.payos.PayOS;
-import vn.payos.type.ItemData;
 import vn.payos.type.PaymentData;
 
 @SessionAttributes("shoppingCartItems")
@@ -223,7 +221,7 @@ public class CustomerController {
     public String updateCartItem(@Valid UpdateShoppingCartDto updateShoppingCartDto, BindingResult bindingResult, RedirectAttributes redirectAttributes, Principal principal) {
 
         if (bindingResult.hasErrors()) {
-            String errorMessage = bindingResult.getAllErrors().get(0).getDefaultMessage();
+            String errorMessage = bindingResult.getAllErrors().getFirst().getDefaultMessage();
             redirectAttributes.addFlashAttribute("error", errorMessage);
             return "redirect:/customer/shopping-cart";
         }
@@ -372,21 +370,10 @@ public class CustomerController {
     public String payOsCheckout(@RequestParam Long orderId) {
         Order order = orderService.getOrderById(orderId);
         try {
-            List<ItemData> items = order.getOrderItem().stream().map(orderItem ->
-                    ItemData.builder()
-                            .name(orderItem.getProduct().getName())
-                            .price(orderItem.getProduct().getPrice())
-                            .quantity(orderItem.getQuantity())
-                            .build()).toList();
             PaymentData paymentData = PaymentData.builder()
                     .orderCode(order.getId())
-                    .buyerName(order.getCustomer().getName())
-                    .buyerEmail(order.getCustomer().getEmail())
-                    .buyerPhone(order.getCustomer().getPhoneNumber())
-                    .buyerAddress(order.getAddressString())
                     .amount(order.getTotalAmount())
                     .expiredAt(order.getPaymentExpiredAt().atZone(ZoneId.systemDefault()).toEpochSecond())
-                    .items(items)
                     .description("FruitShop " + order.getId())
                     .returnUrl("http://localhost:8080/customer/order-success")
                     .cancelUrl("http://localhost:8080/customer/order-cancel")
